--- a/app/views/Journal.html
+++ b/app/views/Journal.html
@@ -428,7 +428,7 @@
 						    </tbody>
 						</table>
 						<span class="pull-right">
-							<button type="button" class="btn clearButton" ng-click="clearQuarantine()">NETTOYER</button>
+							<button type="button" class="btn clearButton" ng-click="clearQuarantine()" ng-if="quarantineObjects.length">NETTOYER</button>
 						</span>
 					</div>
 				</div>	
