--- a/app/views/Main.html
+++ b/app/views/Main.html
@@ -2,8 +2,8 @@
   <div class="row">
     <span class="topcorner">
       <div class="btn-group topcorner" role="group" aria-label="...">
-         <button type="button" class="btn btn-default reduceButton" ><span class="reduceLetter">—</span></button>
-        <button type="button" class="btn btn-default closeButton" ><span class="closeLetter">x</span></button>
+         <button type="button" class="btn btn-default reduceButton" title="{{'main_view.Minimize' | translate }}"ng-click="reduceApp()"><span class="reduceLetter">—</span></button>
+        <button type="button" class="btn btn-default closeButton" title="{{ 'main_view.Close' | translate }}" ng-click="closeApp()"><span class="closeLetter">x</span></button>
       </div>
     </span>
   </div>
@@ -18,14 +18,14 @@
     <a class="navbar-brand" href="#"><img alt="Tatoo" src="images/armadito.png" class="img-responsive"></a>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-          <li><h4 class="status"><b >Votre ordinateur est protégé</b></h4></li>
+          <li><h4 class="status"><b >{{'main_view.Your_computer_is_protected' | translate}}</b></h4></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li ><a ui-sref="Main.Parameters" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">Paramètres</span></a></li>
-        <li><a href=""><i class="fa fa-bar-chart fa-lg"></i>&nbsp;Statistiques</a></li>
+        <li ><a ui-sref="Main.Parameters" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">{{'main_view.Parameters' | translate}}</span></a></li>
+        <li><a href=""><i class="fa fa-bar-chart fa-lg"></i>&nbsp;{{'main_view.Statistics' | translate}}</a></li>
         <li>
           <a href="">
-            <span class="fa-stack">
+            <span class="fa-stack" title="{{ 'main_view.About' | translate }}">
               <i class="fa fa-circle fa-stack-2x circleInterrogation"></i>
               <i class="fa fa-question fa-stack-1x interrogation"></i>
             </span>
@@ -45,7 +45,7 @@
               <br>
   	          <h4 ng-class="item.button.icon"></h4>
               <br>
-  	          <b class="titleGroupItem">{{item.button.tittle}}</b>
+  	          <b class="titleGroupItem">{{item.button.tittle | translate }}</b>
   	        </a>
   	      </div>
   	    </div>
