--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -49,10 +49,10 @@
 	  </div>
 	  <div class="col-xs-4 col-sm-4 col-md-4">
 	  	<ul class="information">
-		  <li class="information"><h5><span class="informationLi">Analyse Temps Réel</span></h5></li>
-		  <li class="information"><h5><span class="informationLi">Service d'analyse</span></h5></li>
-		  <li class="information"><h5><span class="informationLi">Mise à jour des bases</span></li></h5></li>
-		  <li class="information"><h5><span class="informationLi">Dernière mise à jour :</span></h5></li>
+		  <li class="information"><h5><span class="informationLi">{{ 'information_view.Real_time_analyse' | translate}}</span></h5></li>
+		  <li class="information"><h5><span class="informationLi">{{ 'information_view.Analyse_service' | translate}}</span></h5></li>
+		  <li class="information"><h5><span class="informationLi">{{ 'information_view.Update_bases' | translate}}</span></li></h5></li>
+		  <li class="information"><h5><span class="informationLi">{{ 'information_view.Last_update' | translate}} :</span></h5></li>
 		</ul>
 	  </div>
 	  <div class="col-xs-4 col-sm-4 col-md-4">
@@ -73,9 +73,9 @@
 			<table class="table information">
 			    <thead class="information">
 			      <tr class="information">
-			        <th clas="information" style="width:40%"><h4><i class="informationTitle">Modules</i></h4></th>
-			        <th class="information" style="width:60%"><h4><i class="informationTitle">Date</i></h4></th>
-			        <th class="information" style="width:60%"><h4><i class="informationTitle">Status</i></h4></th>
+			        <th clas="information" style="width:40%"><h4><i class="informationTitle">{{ 'information_view.Modules' | translate}}</i></h4></th>
+			        <th class="information" style="width:60%"><h4><i class="informationTitle">{{ 'information_view.Date' | translate}}</i></h4></th>
+			        <th class="information" style="width:60%"><h4><i class="informationTitle">{{ 'information_view.Status' | translate}}</i></h4></th>
 			      </tr>
 			    </thead>
 			    <tbody class="information" id="ex3" ng-repeat="module in state.modules">
