--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -132,24 +132,24 @@
 	<div class="row">
 		<form class="form-horizontal">
 	        <div class="col-xs-12 col-sm-12 col-md-12 form-group">
-	            <label class="control-label col-xs-3 col-sm-3 col-md-3"><i class="analyseTitle">Analyse </i></label>
+	            <label class="control-label col-xs-3 col-sm-3 col-md-3"><i class="analyseTitle">{{ 'analyse_view.Scan' | translate}} </i></label>
 	            <div class="col-xs-6 col-sm-6 col-md-6">
 	               <div class="btn-group btn-block" uib-dropdown>
-				      <button id="split-button" type="button" class="btn analyseChoice" ng-model="type">{{type}}</button>
+				      <button id="split-button" type="button" class="btn analyseChoice" ng-model="type">{{type | translate}}</button>
 				      <button type="button" class="btn analyseChoice" uib-dropdown-toggle>
 				        <span class="fa fa-angle-down fa-lg"></span>
 				      </button>
 				      <ul uib-dropdown-menu role="menu" aria-labelledby="split-button">
-				        <li role="menuitem" ng-model="type"><a href="" ng-click="analyseComplete()"><i class="fa fa-hdd-o"></i>&nbsp;&nbsp;COMPLÈTE</a></li>
-				        <li role="menuitem" ng-model="type"><a href="" ng-click="analyseRapide()"><i class="fa fa-bolt"></i>&nbsp;&nbsp;RAPIDE </a></li>
+				        <li role="menuitem" ng-model="type"><a href="" ng-click="fullScan()"><i class="fa fa-hdd-o"></i>&nbsp;&nbsp;{{ 'analyse_view.Full_scan' | translate}}</a></li>
+				        <li role="menuitem" ng-model="type"><a href="" ng-click="quickScan()"><i class="fa fa-bolt"></i>&nbsp;&nbsp;{{ 'analyse_view.Quick_scan' | translate}} </a></li>
 				        <li class="divider" ></li>
-				        <li role="menuitem" ng-model="type"><a href="" ng-click="analysePersonnalisee()"><i class="fa fa-plus"></i>&nbsp;&nbsp;PERSONALISÉE</a></li>
+				        <li role="menuitem" ng-model="type"><a href="" ng-click="customScan()"><i class="fa fa-plus"></i>&nbsp;&nbsp;{{ 'analyse_view.Custom_scan' | translate}}</a></li>
 				      </ul>
 				    </div>
 	            </div>
 	            <div class="col-xs-3 col-sm-3 col-md-3">
-	            	<button type="button" class="btn stopButton" ng-if="scan_data.progress && scan_data.progress < 100" >STOP</button>
-	            	<button type="button" class="btn startButton" ng-click="StartScan()" ng-if="!scan_data.progress || scan_data.progress === 100 " >START</button>
+	            	<button type="button" class="btn stopButton" ng-if="scan_data.progress && scan_data.progress < 100" >{{ 'analyse_view.Stop' | translate}}</button>
+	            	<button type="button" class="btn startButton" ng-click="StartScan()" ng-if="!scan_data.progress || scan_data.progress === 100 " >{{ 'analyse_view.Start' | translate}}</button>
 	            </div>
 	        </div>
 	    </form>
@@ -177,13 +177,13 @@
 	<div class="row">
 		<div class="col-sm-offset-1 col-md-offset-1 col-xs-12 col-sm-10 col-md-10 text-center">
 			<div class="col-xs-4 col-sm-4 col-md-4">
-				<h5 class="numberOfAnalyseFile">Analysés</h5>
+				<h5 class="numberOfAnalyseFile">{{ 'analyse_view.Scanned' | translate}}</h5>
 			</div>
 			<div class="col-xs-4 col-sm-4 col-md-4">
-				<h5 class="numberOfMaliciousFile">Malicieux</h5>
+				<h5 class="numberOfMaliciousFile">{{ 'analyse_view.Malicious' | translate}}</h5>
 			</div>
 			<div class="col-xs-4 col-sm-4 col-md-4">
-				<h5 class="numberOfSuspectFile">Suspects</h5>
+				<h5 class="numberOfSuspectFile">{{ 'analyse_view.Suspects' | translate}}</h5>
 			</div>
 		</div>
 	</div>
@@ -191,7 +191,7 @@
 		<br>
 		<br>
 		<div class=" col-sm-4 col-md-4 col-sm-offset-4 col-md-offset-4">
-			Aucun fichier analysé
+			{{ 'analyse_view.No_file_scanned_yet' | translate}}
 		</div>
 	</div>
 	<div class="row">
