ng-armadito :: permanent server to receive notifications and and scan information

--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -204,7 +204,7 @@
 			      <tr class="analyse" ng-repeat="file in scan_data.files">
 			      	<td style="width:10%" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
 			        <td style="width:30%" class="analyse" ><h7>{{$index}}</h7></td>
-			        <td style="width:60%"class="analyse"><h7>ZTE-2015-dd542fggh44e648dd545.pdf</h7></td>
+			        <td style="width:60%"class="analyse"><h7>{{file.path}}</h7></td>
 			      </tr>
 			    </tbody>
 			</table>
