--- a/app/views/Journal.html
+++ b/app/views/Journal.html
@@ -103,8 +103,8 @@
 						    </tbody>
 						</table>
 						<span class="pull-right">
-							<button type="button" class="btn clearButton" ng-click="ok()">CLEAR</button>&nbsp;&nbsp;
-							<button type="button" class="btn refreshButton" ng-click="ok()">REFRESH</button>
+							<button type="button" class="btn clearButton" ng-click="ok()">{{'history_view.history_tab.Clear' | translate}}</button>&nbsp;&nbsp;
+							<button type="button" class="btn refreshButton" ng-click="ok()">{{'history_view.history_tab.Refresh' | translate}}</button>
 						</span>
 					</div>
 				</div>
