update modules database files.

--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -63,7 +63,7 @@
 		  </li>
 		  <li class="information2"><h5><i ng-class="state.service ? 'fa fa-check checkIcon' : 'fa fa-exclamation-triangle text-danger'"></i></h5></li>
 		  
-		  <li class="information2"><h5><i class="fa fa-check checkIcon"></i>&nbsp;&nbsp;&nbsp;<i ng-click="update()" class="fa fa-refresh"></i></li></h5></li>
+		  <li class="information2"><h5><i class="fa fa-check checkIcon"></i>&nbsp;&nbsp;&nbsp;<i ng-click="update_db()" class="fa fa-refresh"></i></li></h5></li>
 		  <li class="information2"><h5><b>{{state.last_update}}</b></h5></li>
 		</ul>
 	  </div>
