--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -203,7 +203,8 @@
 			    <tbody class="analyse" id="ex3">
 			      <tr class="analyse" ng-repeat="file in scan_data.files">
 			      	<td style="width:10%" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
-			        <td style="width:30%" class="analyse" ><h7>{{$index}}</h7></td>
+			        <td style="width:10%" class="analyse" ><h7>{{$index}}</h7></td>
+			        <td style="width:20%" class="analyse" ><h7>{{file.scan_status}}</h7></td>
 			        <td style="width:60%"class="analyse"><h7>{{file.path}}</h7></td>
 			      </tr>
 			    </tbody>
